# AI-Fun

./: .gitignore  AGENT_PROMPT_RULES.md  CODE_RULES.md  README.md  main.py  pyproject.toml
src/: commands.py  constants.py
src/ImageGen/: __init__.py  constants.py  generate.py  generate_api.py  generate_cli.py  models.py  types.py
src/InfoGather/: __init__.py  constants.py  context_limit.py  gather_conversation.py  info_book.py  info_book_fallback.py  info_gather_field.py
src/InfoGather/prompts/: __init__.py  default_conversation_vibe.py  default_gather_system_base.py  gather_system.py
src/InfoGather/tools/: __init__.py  ask_user.py  base.py  factory.py  get_field_info.py  handlers.py  lint_book_state.py  view_book.py  write_field.py
src/LLM/: __init__.py  chat.py  chat_non_stream.py  chat_response.py  chat_stream.py  chat_tool.py  chat_utils.py  communication.py  config.py  constants.py  context.py  events.py  message_transformation.py  messages.py  models.py  tool_factory.py  tools.py
src/LLM/chat/: conversation_logger.py  non_stream.py  stream.py  tool_loop.py  tool_usage.py  transformation.py  utils.py
src/LLM/models/: __init__.py  messages.py  models.py  tool_context.py
src/LLM/providers/: __init__.py  how-to-add-provider.md
src/LLM/tools/: __init__.py  base.py  context.py  factory.py
src/minigames/: __init__.py
src/minigames/animation_generator/: __init__.py  constants.py  main.py  prompt_builder.py
src/minigames/company_logo/: __init__.py  constants.py  default_info_book.py  main.py  (+2 more)
src/utility/: info_book_logger.py  path.py  save_text.py
(+12 files in other folders)
